Changed "".formatted(...) -> String.format