@@ -29,7 +29,7 @@ public class CommandSummonVehicle implements CommandExecutor {
                 break;
 
             default:
-                player.sendMessage("unknown item name %s".formatted(args[0].toLowerCase()));
+                player.sendMessage(String.format("unknown item name %s", args[0].toLowerCase()));
                 break;
         }
 
